force-app/main/default/objects/List_View_Config__mdt/List_View_Config__mdt.object-meta.xml
<CustomObject>
    <label>List View Config</label>
    <pluralLabel>List View Configs</pluralLabel>
</CustomObject>