force-app/main/default/objects/List_View_Config__mdt/fields/Data_Table_Load_Type__c.field-meta.xml
<CustomField>
    <fullName>Data_Table_Load_Type__c</fullName>
    <defaultValue>&apos;Paginated&apos;</defaultValue>
    <description>Paginated - X no. of records/page;
Infinite Loading - Scroll to the bottom loads more records;
All at once - All records are displayed at once.</description>
    <inlineHelpText>Paginated - X no. of records/page;
Infinite Loading - Scroll to the bottom loads more records;
All at once - All records are displayed at once.</inlineHelpText>
    <label>Data Table Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Paginated</fullName>
                <default>true</default>
                <label>Paginated</label>
            </value>
            <value>
                <fullName>Infinite Loading</fullName>
                <label>Infinite Loading(Lazy Loading)</label>
            </value>
            <value>
                <fullName>All at once</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>