force-app/main/default/objects/List_View_Config__mdt/fields/Datatable_Height__c.field-meta.xml
<CustomField>
    <fullName>Datatable_Height__c</fullName>
    <description>The height of datatable when Infinite Loading is enabled.</description>
    <inlineHelpText>The height of datatable when Infinite Loading is enabled.</inlineHelpText>
    <label>Datatable Height (in px)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>