force-app/main/default/objects/List_View_Config__mdt/fields/List_Load_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>List_Load_Error_Message__c</fullName>
    <defaultValue>&apos;Oops! An error occurred while loading the list. Please contact the system administrator.&apos;</defaultValue>
    <description>Message to be displayed when any error is encountered while loading the list.</description>
    <inlineHelpText>Message to be displayed when any error is encountered while loading the list.</inlineHelpText>
    <label>List Load Error Message</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>