force-app/main/default/objects/List_View_Config__mdt/fields/Options_For_Records_Page__c.field-meta.xml
<CustomField>
    <fullName>Options_For_Records_Page__c</fullName>
    <defaultValue>&apos;10, 20, 30, 40, 50, 60, 70, 80, 90, 100&apos;</defaultValue>
    <description>Options for user to select any no. of records to be displayed in the list view.</description>
    <inlineHelpText>Options for user to select any no. of records to be displayed in the list view.</inlineHelpText>
    <label>Options for Records/Page</label>
    <length>255</length>
    <type>Text</type>
</CustomField>