force-app/main/default/objects/List_View_Config__mdt/fields/Order_By__c.field-meta.xml
<CustomField>
    <fullName>Order_By__c</fullName>
    <description>The default sorting order of the table.</description>
    <inlineHelpText>The default sorting order of the table.</inlineHelpText>
    <label>Order By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>