force-app/main/default/objects/List_View_Config__mdt/fields/Record_Offset__c.field-meta.xml
<CustomField>
    <fullName>Record_Offset__c</fullName>
    <description>The no. of records to be displayed at once when Infinite Loading is enabled.</description>
    <inlineHelpText>The no. of records to be displayed at once when Infinite Loading is enabled.</inlineHelpText>
    <label>Record Offset</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>