force-app/main/default/objects/List_View_Config__mdt/fields/Search_Box_Placeholder__c.field-meta.xml
<CustomField>
    <fullName>Search_Box_Placeholder__c</fullName>
    <defaultValue>&apos;Enter text to search..&apos;</defaultValue>
    <description>Placeholder text for the search box.</description>
    <inlineHelpText>Placeholder text for the search box.</inlineHelpText>
    <label>Search Box Placeholder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>