force-app/main/default/objects/List_View_Config__mdt/fields/Show_Row_Number__c.field-meta.xml
<CustomField>
    <fullName>Show_Row_Number__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When true, the row number is displayed as the first column.</description>
    <inlineHelpText>When true, the row number is displayed as the first column.</inlineHelpText>
    <label>Show Row Number</label>
    <type>Checkbox</type>
</CustomField>