force-app/main/default/objects/List_View_Config__mdt/fields/SObject_API_Name__c.field-meta.xml
<CustomField>
    <fullName>SObject_API_Name__c</fullName>
    <description>SObject API Name whose records are to be displayed.</description>
    <inlineHelpText>SObject API Name whose records are to be displayed.</inlineHelpText>
    <label>SObject API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>