force-app/main/default/objects/List_View_Config__mdt/fields/Static_Filter__c.field-meta.xml
<CustomField>
    <fullName>Static_Filter__c</fullName>
    <description>The static WHERE condition to be used in the SOQL query. E.g. CreatedDate = TODAY</description>
    <inlineHelpText>The static WHERE condition to be used in the SOQL query. E.g. CreatedDate = TODAY</inlineHelpText>
    <label>Static Filter</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>