force-app/main/default/objects/List_View_Config__mdt/validationRules/HeightAndRecordOffsetValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>HeightAndRecordOffsetValidation</fullName>
    <active>true</active>
    <description>When Data Table Type is &quot;Infinite Loading(Lazy Loading)&quot;, then Datatable Height (in px) and Record Offset should be filled, otherwise should be left blank.</description>
    <errorConditionFormula>(
				ISPICKVAL(Data_Table_Load_Type__c, &apos;Infinite Loading&apos;) &amp;&amp;
    (ISBLANK(Datatable_Height__c) || ISBLANK(Record_Offset__c))
)
||
(
				!ISPICKVAL(Data_Table_Load_Type__c, &apos;Infinite Loading&apos;) &amp;&amp;
    (!ISBLANK(Datatable_Height__c) || !ISBLANK(Record_Offset__c))
)</errorConditionFormula>
    <errorMessage>When Data Table Type is &quot;Infinite Loading(Lazy Loading)&quot;, then Datatable Height (in px) and Record Offset should be filled, otherwise should be left blank.</errorMessage>
</ValidationRule>