force-app/main/default/objects/List_View_Config__mdt/validationRules/OptionForRecordsPerPageValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>OptionForRecordsPerPageValidation</fullName>
    <active>true</active>
    <description>Options for Records/Page should be filled if Data Table Type is &quot;Paginated&quot;, otherwise should be left blank.</description>
    <errorConditionFormula>(
				ISPICKVAL(Data_Table_Load_Type__c, &apos;Paginated&apos;) &amp;&amp;
    ISBLANK(Options_For_Records_Page__c)
)
||
(
				!ISPICKVAL(Data_Table_Load_Type__c, &apos;Paginated&apos;) &amp;&amp;
    !ISBLANK(Options_For_Records_Page__c)
)</errorConditionFormula>
    <errorMessage>Options for Records/Page should be filled if Data Table Type is &quot;Paginated&quot;, otherwise should be left blank.</errorMessage>
</ValidationRule>