force-app/main/default/objects/List_View_Config__mdt/validationRules/RecordOffsetCannotBeMoreThanRecordLimit.validationRule-meta.xml
<ValidationRule>
    <fullName>RecordOffsetCannotBeMoreThanRecordLimit</fullName>
    <active>true</active>
    <description>The Record Offset value can&apos;t be more than that of the Record Limit value.</description>
    <errorConditionFormula>Record_Offset__c != null &amp;&amp; Record_Offset__c &gt; Record_Limit__c</errorConditionFormula>
    <errorDisplayField>Record_Offset__c</errorDisplayField>
    <errorMessage>The Record Offset value can&apos;t be more than that of the Record Limit value.</errorMessage>
</ValidationRule>