force-app/main/default/objects/List_View_Config__mdt/validationRules/SearchBoxPlaceholderValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>SearchBoxPlaceholderValidation</fullName>
    <active>true</active>
    <description>If &quot;Show Search Box&quot; is selected then &quot;Search Box Placeholder&quot; should be filled, otherwise should be left blank.</description>
    <errorConditionFormula>(
				Show_Search_Box__c &amp;&amp; ISBLANK(Search_Box_Placeholder__c)
)
||
(
				!Show_Search_Box__c &amp;&amp; !ISBLANK(Search_Box_Placeholder__c)
)</errorConditionFormula>
    <errorDisplayField>Search_Box_Placeholder__c</errorDisplayField>
    <errorMessage>If &quot;Show Search Box&quot; is selected then &quot;Search Box Placeholder&quot; should be filled, otherwise should be left blank.</errorMessage>
</ValidationRule>