force-app/main/default/objects/List_View_Config__mdt/listViews/Details.listView-meta.xml
<ListView>
    <fullName>Details</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>SObject_API_Name__c</columns>
    <columns>Data_Table_Load_Type__c</columns>
    <columns>List_Title__c</columns>
    <columns>Fields_To_Display__c</columns>
    <columns>Search_Box_Placeholder__c</columns>
    <columns>Show_Row_Number__c</columns>
    <columns>Show_Search_Box__c</columns>
    <filterScope>Everything</filterScope>
    <label>Details</label>
    <language>en_US</language>
</ListView>